--- a/Templates/listings/listings.html
+++ b/Templates/listings/listings.html
@@ -111,16 +111,7 @@ Property Listings {% endblock %} {% block content %}
           <li class="page-item disabled">
             <a class="page-link">&laquo;</a>
           </li>
-          {% endif %} {% for i in listings.paginator.page_range %} {% if
-          listings.number == i %}
-          <li class="page-item active">
-            <a class="page-link">{{ i }}</a>
-          </li>
-          {% else %}
-          <li class="page-item">
-            <a href="?page={{ i }}" class="page-link">{{ i }}</a>
-          </li>
-          {% endif %} {% endfor %} {% if listings.has_next %}
+          {% endif %} {% if listings.has_next %}
           <li class="page-item">
             <a href="?page={{ listings.next_page_number }}" class="page-link"
               >&raquo;</a
