--- a/Templates/pages/about.html
+++ b/Templates/pages/about.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% load static %}
+{% extends 'base.html' %} {% load static %} {% block title %} | About
+{%endblock %} {% block content %}
 <!-- Breadcrumb -->
 <section id="bc" class="mt-3">
   <div class="container">
@@ -19,8 +20,7 @@
       <div class="col-md-8">
         <h2>We Search For The Perfect Home</h2>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
-          pariatur!
+          Want a vacation home by the beach? A cottage on the mountains? A condo in the city? We have just the place for you!
         </p>
         <img src="{% static 'img/about.jpg' %}" alt="" />
         <p class="mt-4">
@@ -32,6 +32,7 @@
         </p>
       </div>
       <div class="col-md-4">
+        {% if mvp_realtors %} {% for realtor in mvp_realtors %}
         <div class="card">
           <img
             class="card-img-top"
@@ -40,13 +41,13 @@
           />
           <div class="card-body">
             <h5 class="card-title">Seller Of The Month</h5>
-            <h6 class="text-secondary">Kyle Brown</h6>
+            <h6 class="text-secondary">{{ realtor.name }}</h6>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-              nesciunt amet, illo itaque similique repellat. content.
+              {{ realtor.description }}
             </p>
           </div>
         </div>
+        {% endfor %} {% endif %}
       </div>
     </div>
   </div>
@@ -70,46 +71,20 @@
   <div class="container">
     <h2 class="text-center">Our Team</h2>
     <div class="row text-center">
+      {% if realtors %} {% for realtor in realtors %}
       <div class="col-md-4">
-        <img
-          src="assets/img/realtors/kyle.jpg"
-          alt=""
-          class="rounded-circle mb-3"
-        />
-        <h4>Kyle Brown</h4>
+        <img src="{{ realtor.photo.url }}" alt="" class="rounded-circle mb-3" />
+        <h4>{{ realtor.name }}</h4>
         <p class="text-success">
           <i class="fas fa-award text-success mb-3"></i> Realtor
         </p>
         <hr />
-        <p><i class="fas fa-phone"></i> (555)-555-5555</p>
-        <p><i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
+        <p><i class="fas fa-phone"></i> {{ realtor.phone }}</p>
+        <p><i class="fas fa-envelope-open"></i> {{ realtor.email }}</p>
       </div>
-
-      <div class="col-md-4">
-        <img
-          src="assets/img/realtors/mark.jpg"
-          alt=""
-          class="rounded-circle mb-3"
-        />
-        <h4>Mark Hudson</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (444)-444-4444</p>
-        <p><i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-      </div>
-
-      <div class="col-md-4">
-        <img
-          src="assets/img/realtors/jenny.jpg"
-          alt=""
-          class="rounded-circle mb-3"
-        />
-        <h4>Jenny Johnson</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (333)-333-3333</p>
-        <p><i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-      </div>
+      {% endfor %} {% else %}
+      <div class="col-md-12"><p>No realors available</p></div>
+      {% endif %}
     </div>
   </div>
 </section>
