--- a/Templates/listings/listings.html
+++ b/Templates/listings/listings.html
@@ -6,8 +6,7 @@ Property Listings {% endblock %} {% block content %}
       <div class="col-md-12">
         <h1 class="display-4">Browse Our Properties</h1>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
-          pariatur!
+          Here you can find the best homes for you and your family!
         </p>
       </div>
     </div>
