--- a/Templates/pages/about.html
+++ b/Templates/pages/about.html
@@ -24,11 +24,7 @@
         </p>
         <img src="{% static 'img/about.jpg' %}" alt="" />
         <p class="mt-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-          esse officia repudiandae ad saepe ex, amet neque quod accusamus rem
-          quia magnam magni dolorum facilis ullam minima perferendis?
-          Exercitationem at quaerat commodi id libero eveniet harum perferendis
-          laborum molestias quia.
+          BT Real Estate has been helping families find new homes for over 15 years. We're a small business with a large portfolio consisting of both newly constructed condos and older homes where you'll be able to live headache free for years to come. We have more than 20 licensed real estate agents ready to assist you on your quest for a dream place.
         </p>
       </div>
       <div class="col-md-4">
@@ -57,8 +53,7 @@
 <section id="work" class="bg-dark text-white text-center">
   <h2 class="display-4">We Work For You</h2>
   <h4>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit
-    aperiam, unde aliquid at similique!
+    You tell us your wishlist and we work to make sure you get everything you asked for.
   </h4>
   <hr />
   <a href="listings.html" class="btn btn-secondary text-white btn-lg"
