--- a/Templates/pages/index.html
+++ b/Templates/pages/index.html
@@ -9,9 +9,7 @@
           Property Searching Just Got So Easy
         </h1>
         <p class="lead">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-          quas, asperiores eveniet vel nostrum magnam voluptatum tempore!
-          Consectetur, id commodi!
+          Use the form below to search for your dream place.
         </p>
         <div class="search">
           <form action="{% url 'search' %}">
@@ -164,19 +162,15 @@
         <hr />
         <h3>Consulting Services</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          Want us to evaluate how much your place is worth? Send us an inquiry and we promise to have an evaluation ready in just 48 hours.
         </p>
       </div>
       <div class="col-md-4">
         <i class="fas fa-home fa-4x mr-4"></i>
         <hr />
-        <h3>Propery Management</h3>
+        <h3>Property Management</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          We know how time consuming managing your properties can be. Just leave it to us and go to the beach. No headaches, no worries, no time wasted. We got you.
         </p>
       </div>
       <div class="col-md-4">
@@ -184,9 +178,7 @@
         <hr />
         <h3>Renting & Selling</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
+          Are you trying to get rid of rent and become a home owner? Are you home owner trying to rent one of your properties? You've come to the right place.
         </p>
       </div>
     </div>
